Bug 156545 - a11y checker warns about some character style formattings
Summary: a11y checker warns about some character style formattings
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.1 rc
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords:
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2023-07-31 08:28 UTC by Thorsten Behrens (allotropia)
Modified: 2023-08-03 06:55 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Test doc with problematic char style (10.77 KB, application/vnd.oasis.opendocument.text)
2023-07-31 08:30 UTC, Thorsten Behrens (allotropia)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thorsten Behrens (allotropia) 2023-07-31 08:28:42 UTC
Description:
Setting for example a border, or a background highlight color in a character sty;e in Writer, leads to the a11y checker mistakenly report an "The text formatting conveys additional meaning" error. See attached bugdoc - the trigger seems to be the kind of character formatting change, not the fact that character styles are used.

Steps to Reproduce:
1. load bugdoc
2. enable automatic a11y checking
3. switch to a11y sidebar, notice the warning

Actual Results:
a11y sidebar issues spurious warning

Expected Results:
a11y sidebar does not warn about using styles (as compared to direct formatting)


Reproducible: Always


User Profile Reset: No

Additional Info:
-
Comment 1 Thorsten Behrens (allotropia) 2023-07-31 08:30:08 UTC
Created attachment 188667 [details]
Test doc with problematic char style
Comment 2 Gabor Kelemen (Collabora) 2023-07-31 08:42:15 UTC
Seems like the warning is gone if I remove the character highlighting from the "Border Example" style.
Comment 3 Commit Notification 2023-08-01 23:16:55 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/47ca3f1f762352b488d58b3bf23d5776576f1cca

tdf#156545 - a11y - fix warns about background character style formattings

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-08-02 11:02:58 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/7109110a6494e9af2fa8aa9291d5f10f23f3f26b

tdf#156545 - a11y - fix warns about background character style formattings

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.